OpenJMLTest/test/textBlock2/expected
test/textBlock2/Test.java:5: error: unclosed text block
			"""
			^
test/textBlock2/Test.java:7: error: ';' expected
			  def
^
test/textBlock2/Test.java:9: error: ';' expected
		//@ show s.length();
		   ^
Operation not performed because of parse or type errors
3 errors
